--- a/css/style1.css
+++ b/css/style1.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url(../img/fundo2.webp);
+  background-color: white;
   background-attachment: fixed;
   background-size: 300px 300px;
   text-align: center;
