--- a/css/style1.css
+++ b/css/style1.css
@@ -25,8 +25,8 @@ p {
 
 
 header {
-  background-color: #333;
-  color: #fff;
+  background-color: #808080;
+  color: #808080;
   padding: 20px;
 }
 
@@ -49,8 +49,8 @@ nav a {
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: #808080;
+  color: #808080;
   padding: 10px;
   text-align: center;
 }
