--- a/css/style1.css
+++ b/css/style1.css
@@ -26,7 +26,7 @@ p {
 
 header {
   background-color: #808080;
-  color: #000000;
+  color: #ffffff;
   padding: 20px;
 }
 
@@ -50,7 +50,7 @@ nav a {
 
 footer {
   background-color: #808080;
-  color: #000000;
+  color: #ffffff;
   padding: 10px;
   text-align: center;
 }
